# easy-equities-client

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  contributing.md  mypy.ini  pyproject.toml  readme.md  setup.py
.github/workflows/: continuous_integration.yml
easy_equities_client/: clients.py  constants.py  types.py
easy_equities_client/accounts/: clients.py  parsers.py  transaction_matching.py  types.py
easy_equities_client/instruments/: clients.py  types.py
easy_equities_client/transactions/: base_matchers.py  matchers.py  patterns.py  types.py
easy_equities_client/utils/: dataclasses.py
examples/: get_transactions.py  get_transactions_for_period.py  requirements.txt  show_holdings_profit_loss.py
tests/: conftest.py  test_clients.py
tests/accounts/: test_clients.py  test_parsers.py
tests/data/: account-holdings.html  account-overview.html  account-transactions.json  account-valuations.json  historical-prices.json  holding-details.html  transactions-history-empty.html  transactions-history-page1.html
tests/instruments/: test_clients.py
