[tool.poetry]
name = "easy-equities-client"
version = "0.5.0"
description = "Unofficial Easy Equities and Satrix Python Client"

authors = ["Delena Malan <delena.malan@gmail.com>"]
maintainers = ["Delena Malan <delena.malan@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/delenamalan/easy-equities-client"
repository = "https://github.com/delenamalan/easy-equities-client"

keywords = ["easyequities", "satrix", "money"]

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.6',
]

packages = [
    { include = "easy_equities_client" }
]

[tool.poetry.dependencies]
python = ">= 3.6.1, < 4"
requests = "^2.25.0"
bs4 = "^0.0.1"
typing-extensions = { version = "^3.10.0", python = "<3.8" }
importlib-metadata = { version = "^4.6.3", python = "<3.8" }
dataclasses = { version = "^0.8.0", python = "<3.7" }

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"
bump2version = "^1.0.1"
pre-commit = "^2.8.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"
requests-mock = "^1.8.0"
lxml = "^4.6.2"
mypy = "^0.790"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
